--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	</head>
 	<body>
 
+		<div id="fb-root"></div>
+		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v8.0&appId=333838924488716&autoLogAppEvents=1" nonce="3VYrgJ0P"></script>
+
 	<!-- MENU DE NAVEGACION -->	
 	<img src="img/entrenador-vivencial.png" class="img-vivencial" alt="Entrenador vivencial">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -108,15 +111,38 @@
 		<div class="row justify-content-around">
 			<div class="columna col-12 col-lg-6" style="margin-top: 50px; margin-bottom: 30px">
 					<img id="centrado" src="img/index/Cristian Ayala_097.jpg" alt="Christian Ayala">
-					<h1 class="text-center fuente color-azul" style="margin-top: 20px; margin-bottom: 50px;"><strong>Christian Ayala</strong></h1>
+					<h1 class="text-center titulo2" style="margin-top: 20px; margin-bottom: 50px;"><strong>Christian Ayala</strong></h1>
 			</div>
 			<div class="columna col-12 col-lg-6" id="col-coach">
 				<h3 id="titulo-coach" class="text-center fuente color-azul" style="margin-bottom: 15px"><strong>Coaching y entrenamiento vivencial</strong></h3>
 				<p class="tipo text-justify titulo2" id="parra-coach">Christian Ayala Espinosa es un joven padre y esposo, ingeniero civil de profesión, entrenador vivencial y altruista por vocación, que busca coronar toda una vida de logros deportivos haciendo que estos trasciendan más allá de las marcas personales y las medallas, habiéndose convertido en el 9no mexicano en conquisar la Triple Corona de Aguas Abiertas y el 1ero en la historia en hacerlo por una causa puramente altruista.</p>
-				<a style="margin-bottom: 30px" type="button" class="btn btn-outline-dark" href="quien-es-christian.html">
-					<h5 class="" style="font-size: 30px;">Saber más...</h5>
-				</a>
+				<a href="quien-es-christian.html" class="boton1"><span class="boton-decorado">Saber Más</span></a>
 			</div>
+		</div>
+	</div>
+
+	<!-- Parte de video promocional de DXU -->
+	<div class="container-fluid videoPromocional">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-10">
+					<h2 class="color-azul tituloVP">Tu entrenamiento está por comenzar</h2>
+				</div>
+				<div class="col-10 contenidoVideoPromocional">
+					<p class="titulo3 contenidoVP">¿Estás preparad@ para las pruebas que te confronta la vida día a día?</p>
+					<p class="titulo3 contenidoVP">La noche más obscura, el día menos pensado, ese momento que te toma por sorpresa, te comienza a someter y hace que custiones tus capacidades hasta que ya no puedes más. Vamos juntos a romper prejuicios, a doblegar barreras y a dominarte a ti mismo.</p>
+					<p class="titulo3 contenidoVP">Tu entrenamiento vivencial comienza ¡HOY!</p>
+				</div>
+			</div>
+			
+			<div class="fb-video videoVP" data-href="https://www.facebook.com/DXUStream/videos/350831636323986/" data-show-text="false" data-width="" data-allowfullscreen="true" data-lazy="true"><blockquote cite="https://developers.facebook.com/DXUStream/videos/350831636323986/" class="fb-xfbml-parse-ignore"><a href="https://developers.facebook.com/DXUStream/videos/350831636323986/">TU ENTRENAMIENTO ESTÁ POR COMENZAR</a><p>¿Estás preparad&#064; para las pruebas que te confronta la vida día a día?
+	
+				La noche más obscura, el día menos pensado, ese momento que te toma por sorpresa, te comienza a someter y hace que custiones tus capacidades hasta que ya no puedes más. Vamos juntos a romper prejuicios, a doblegar barreras y a dominarte a ti mismo. 
+				
+				Tu entrenamiento vivencial comienza ¡HOY!</p>Publicada por <a href="https://www.facebook.com/DXUStream/">DXU</a> en Lunes, 31 de agosto de 2020</blockquote>
+			</div>
+
+			<a href="https://www.facebook.com/DXUStream" class="botonVP" target="_blank">Saber Más</a>
 		</div>
 	</div>
 
@@ -262,22 +288,22 @@
 			<div class="row justify-content-center" >
 				<div class="col-3 col-md-1 py-3" style="margin-top: 30px;">
 					<a href="https://www.facebook.com/ChristianAyalaOficial/" target="_blank">
-						<i class="iconos fab fa-facebook-f fa-2x"></i>
+						<i class="iconos fab fa-facebook-f fa-2x facebook"></i>
 					</a>
 				</div>
 				<div class="col-3 col-md-1 py-3" style="margin-top: 30px;">
 					<a href="https://twitter.com/christianayalaO" target="_blank">
-						<i class="iconos fab fa-twitter fa-2x"></i>
+						<i class="iconos fab fa-twitter fa-2x twitter"></i>
 					</a>
 				</div>
 				<div class="col-3 col-md-1 py-3" style="margin-top: 30px;">
 					<a href="https://www.instagram.com/christianayalaoficial/" target="_blank">
-						<i class="iconos fab fa-instagram fa-2x"></i>
+						<i class="iconos fab fa-instagram fa-2x instagram"></i>
 					</a>
 				</div>
 				<div class=" col-3 col-md-1 py-3" style="margin-top: 30px;">
 					<a href="https://www.youtube.com/user/ayalacanaldelamancha" target="_blank">
-						<i class="iconos fab fa-youtube fa-2x"></i>
+						<i class="iconos fab fa-youtube fa-2x youtube"></i>
 					</a>
 				</div>
 			</div>
